@@ -34,7 +34,7 @@ class db_albums extends db_audio
 		// modify some request stuff
 		$request['order_by'] = 'Album';
 		$request['group_by'] = 'Album';
-		$files = db_file::get($database, $request, $count, $error, 'db_audio');
+		$files = parent::get($database, $request, $count, $error, 'db_audio');
 		
 		// make some changes
 		foreach($files as $i => $file)
